[gd_scene load_steps=17 format=3 uid="uid://c0gsa2qfmv8ig"]

[ext_resource type="Script" uid="uid://cyg7jhn4clo48" path="res://Scripts/Objects/scPulse.gd" id="1_x4ft2"]
[ext_resource type="Texture2D" uid="uid://dykokniofxcl4" path="res://Sprites/Menus/GUI/skillcheckInputFill.png" id="2_kg6l1"]
[ext_resource type="Texture2D" uid="uid://pj7fnav4kks" path="res://Sprites/Menus/GUI/skillcheckInputBorder.png" id="3_dtqwj"]
[ext_resource type="Texture2D" uid="uid://b7x0kebb7yk12" path="res://Sprites/Menus/GUI/skeletronRageAccelFill.png" id="4_dtqwj"]
[ext_resource type="Texture2D" uid="uid://cp744qvckapuh" path="res://Sprites/Menus/GUI/skillcheckPulseHeart.png" id="4_qkicd"]
[ext_resource type="Texture2D" uid="uid://bkfu0uyrlg8h5" path="res://Sprites/Menus/GUI/skeletronRageAccel.png" id="5_qkicd"]
[ext_resource type="Texture2D" uid="uid://lt1rpmbbmf1k" path="res://Sprites/Menus/GUI/skillcheckInputPrompts.png" id="7_qkicd"]

[sub_resource type="Animation" id="Animation_qkicd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BGdamp:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HEART:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HEART:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(475, 316.5)]
}

[sub_resource type="Animation" id="Animation_dtqwj"]
resource_name = "add_child"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BGdamp:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.25098)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HEART:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HEART:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(0.392292, 1),
"update": 0,
"values": [Vector2(475, 316.5), Vector2(475, 196.5)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("hintParent/master")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"startup", -1, 1.0, false],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3y2ax"]
_data = {
&"RESET": SubResource("Animation_qkicd"),
&"add_child": SubResource("Animation_dtqwj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3y2ax"]
size = Vector2(64, 169)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qkicd"]
size = Vector2(150, 169)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dtqwj"]
size = Vector2(64, 169)

[sub_resource type="Animation" id="Animation_61aa4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 152)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3y2ax"]
resource_name = "startup"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1.6, 2),
"transitions": PackedFloat32Array(0.277392, 1, 2.63902, 1),
"update": 0,
"values": [Vector2(0, 208), Vector2(0, 152), Vector2(0, 152), Vector2(0, 208)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0mlm4"]
_data = {
&"RESET": SubResource("Animation_61aa4"),
&"startup": SubResource("Animation_3y2ax")
}

[node name="SC_Pulse" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_x4ft2")
noteIntervalRange = Vector2(0.4, 1.65)
noteHitEscape = 15

[node name="animMaster" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3y2ax")
}

[node name="BGdamp" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="recoverProgress" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.4999
offset_top = 16.5
offset_right = 56.5001
offset_bottom = 383.5
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(56, 183)
max_value = 25.0
step = 0.0
value = 12.5
fill_mode = 3
texture_under = ExtResource("2_kg6l1")
texture_over = ExtResource("3_dtqwj")
texture_progress = ExtResource("2_kg6l1")
tint_under = Color(0.289063, 0.0534464, 0.0534464, 1)
tint_progress = Color(1, 0, 0.453125, 1)

[node name="playerHealth" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -215.0
offset_right = 150.0
offset_bottom = -185.0
grow_horizontal = 2
grow_vertical = 2
value = 50.0
texture_under = ExtResource("4_dtqwj")
texture_over = ExtResource("5_qkicd")
texture_progress = ExtResource("4_dtqwj")
tint_under = Color(0.176471, 0.290196, 0.211765, 1)
tint_progress = Color(0.392157, 0.792157, 0.298039, 1)

[node name="HEART" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -141.0
offset_right = 125.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_qkicd")

[node name="sideL" type="Area2D" parent="HEART"]
visible = false
position = Vector2(32, 125)
collision_layer = 0
collision_mask = 2147483648
monitorable = false

[node name="shape" type="CollisionShape2D" parent="HEART/sideL"]
shape = SubResource("RectangleShape2D_3y2ax")
debug_color = Color(1, 0, 0, 1)

[node name="Early" type="Area2D" parent="HEART/sideL"]
position = Vector2(-200, 0)
collision_layer = 0
collision_mask = 2147483648
monitorable = false

[node name="shape" type="CollisionShape2D" parent="HEART/sideL/Early"]
shape = SubResource("RectangleShape2D_qkicd")
debug_color = Color(0.690104, 0.0413343, 0.0413343, 0.529412)

[node name="sideR" type="Area2D" parent="HEART"]
visible = false
position = Vector2(219, 125)
collision_layer = 0
collision_mask = 2147483648
monitorable = false

[node name="shape" type="CollisionShape2D" parent="HEART/sideR"]
shape = SubResource("RectangleShape2D_dtqwj")
debug_color = Color(0, 0.203125, 1, 1)

[node name="Early" type="Area2D" parent="HEART/sideR"]
position = Vector2(200, 0)
collision_layer = 0
collision_mask = 2147483648
monitorable = false

[node name="shape" type="CollisionShape2D" parent="HEART/sideR/Early"]
shape = SubResource("RectangleShape2D_qkicd")
debug_color = Color(0.690104, 0.0413343, 0.0413343, 0.529412)

[node name="hintParent" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 152.0
offset_bottom = 246.0
grow_horizontal = 2

[node name="hintLeft" type="Sprite2D" parent="hintParent"]
position = Vector2(375.75, 47)
scale = Vector2(0.374, 0.374)
texture = ExtResource("7_qkicd")
hframes = 4
vframes = 2

[node name="hintRight" type="Sprite2D" parent="hintParent"]
position = Vector2(823.75, 47)
scale = Vector2(0.374, 0.374)
texture = ExtResource("7_qkicd")
hframes = 4
vframes = 2
frame = 1

[node name="master" type="AnimationPlayer" parent="hintParent"]
libraries = {
&"": SubResource("AnimationLibrary_0mlm4")
}

[connection signal="area_entered" from="HEART/sideL" to="." method="_sideL_detection"]
[connection signal="area_exited" from="HEART/sideL" to="." method="_sideL_release"]
[connection signal="area_entered" from="HEART/sideR" to="." method="_sideR_detection"]
[connection signal="area_exited" from="HEART/sideR" to="." method="_sideR_release"]
